# log-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/log_system/: config.py
src/log_system/log_parser/: spell.py
src/log_system/log_parser/scripts/: dowload_logs.py  run_spell.py
